# app/Http/Controllers/API/BookController.php
@@ -8,11 +8,28 @@ use Illuminate\Http\Request;
 use Symfony\Component\HttpKernel\Exception\HttpException;
 use App\Models\Book;
 use OpenApi\Annotations as OA;
+use Illuminate\Support\Facades\Auth;
 
 /**
  * Class BookController.
  *
  * @author steven <steven.422024001@ukrida.ac.id>
+ */
+
+ /**
+ * @OA\SecurityScheme(
+ *     securityScheme="passport",
+ *     type="http",
+ *     scheme="bearer",
+ *     bearerFormat="JWT"
+ * )
+ *
+ * @OA\SecurityScheme(
+ *     securityScheme="passport_token_ready",
+ *     type="apiKey",
+ *     in="header",
+ *     name="Authorization"
+ * )
  */
 
 class BookController extends Controller
@@ -23,25 +40,127 @@ class BookController extends Controller
      *     tags={"book"},
      *     summary="Display a listing of items",
      *     operationId="index",
+     * security={
+     *         {"passport_token_ready"={}},
+     *         {"passport"={}}
+     *     },
      *     @OA\Response(
      *         response=200,
      *         description="Successful",
      *         @OA\JsonContent()
-     *     )
-     * )
+     *     ),
+     * @OA\Parameter(
+     *     name="_page",
+     *       in="query",
+     *          description="current page",
+     *          required=true,
+     *          @OA\Schema(
+     *              type="integer",
+     *              format="int64",
+     *              example=1
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="_limit",
+     *          in="query",
+     *          description="max item in a page",
+     *          required=true,
+     *          @OA\Schema(
+     *              type="integer",
+     *              format="int64",
+     *              example=10
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="_search",
+     *          in="query",
+     *          description="word to search",
+     *          required=false,
+     *          @OA\Schema(
+     *              type="string",
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="_publisher",
+     *          in="query",
+     *           description="search by publisher like name",
+     *          required=false,
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="_sort_by",
+     *          in="query",
+     *          description="word to search",
+     *          required=false,
+     *          @OA\Schema(
+     *              type="string",
+     *              example="latest"
+     *          )
+     *      ),
+     *  )
      */
-    public function index()
+       public function index(Request $request)
     {
-        $book = Book::all();
-        return response()->json(array('message' => 'Data retrieved successfully', 'data' => $book), 200);
-    }
+        try {
+            $data['filter']      = $request->all();
+            $page                = ($data['filter']['_page'] ? intval($data['filter']['_page']) : 1);
+            $limit               = ($data['filter']['_limit'] ? intval($data['filter']['_limit']) : 1000);
+            $offset              = ($page>0?$page-1:0)*$limit;
+            $data['products']    = Book::whereRaw("1 = 1");
 
+            if($request->get('_search')){
+                $data['products'] = $data['products']->whereRaw("(LOWER(title) LIKE \"%".strtolower($request->get('_search'))."%\" OR LOWER(author) LIKE \"%".strtolower($request->get('_search'))."%\")");
+            }
+            if($request->get('_publisher')){
+                $data['products'] = $data['products']->whereRaw("LOWER(publisher) = '".strtolower($request->get('_publisher'))."'");
+            }
+
+            if($request->get('_sort_by')){
+                switch ($request->get('_sort_by')) {
+                    default:
+                    case 'latest_publication':
+                        $data['products'] = $data['products']->orderBy('publication_year','DESC');
+                        break;
+                    case 'latest_added':
+                        $data['products'] = $data['products']->orderBy('created_at','DESC');
+                        break;
+                    case 'title_asc':
+                        $data['products'] = $data['products']->orderBy('title','ASC');
+                        break;
+                    case 'title_desc':
+                        $data['products'] = $data['products']->orderBy('title','DESC');
+                        break;
+                    case 'price_asc':
+                        $data['products'] = $data['products']->orderBy('price','ASC');
+                        break;
+                    case 'price_desc':
+                        $data['products'] = $data['products']->orderBy('price','DESC');
+                        break;
+                }
+            }
+            $data['products_count_total']  = $data['products']->count();
+            $data['products']              = ($limit==0 && $offset==0)?$data['products']:$data['products']->limit($limit)->offset($offset);
+            // $data['products_raw_sql']   = $data['products']->toSql();
+            $data['products']              = $data['products']->get();
+            $data['products_count_start']  = $data['products_count_total'] == 0 ? 0 : (($page-1)*$limit)+1;
+            $data['products_count_end']    = $data['products_count_total'] == 0 ? 0 : (($page-1)*$limit)+sizeof($data['products']);
+            return response()->json($data, 200);
+        } catch (\Exception $exception) {
+            throw new HttpException(400, "Invalid data : {$exception->getMessage()}");
+        }
+    }
     /**
      * @OA\Post(
      *     path="/my-api/public/api/book",
      *     tags={"book"},
      *     summary="Store a newly created item",
      *     operationId="store",
+     * security={
+     *         {"passport_token_ready"={}},
+     *         {"passport"={}}
+     *     },
      *     @OA\Response(
      *         response=400,
      *         description="Invalid input",
@@ -80,7 +199,9 @@ class BookController extends Controller
 
             $book = new Book;
             $book->fill($request->all())->save();
-            return response()->json(array('message' => 'Saved successfully', 'data' => $book), 200);
+            $book->created_by = Auth::user()->id; //Store the user ID
+            $book->save();
+            return response()->json(array('message' => 'Saved successfully', 'data' =>$book), 200);
         } catch (\Exception $exception) {
             throw new HttpException(400, "Invalid data - {$exception->getMessage()}");
         }
@@ -91,6 +212,10 @@ class BookController extends Controller
      *     tags={"book"},
      *     summary="Display the specified item",
      *     operationId="show",
+     * security={
+     *         {"passport_token_ready"={}},
+     *         {"passport"={}}
+     *     },
      *     @OA\Response(
      *         response=404,
      *         description="Item not found",
@@ -121,7 +246,10 @@ class BookController extends Controller
     public function show($id)
     {
         $book = Book::findOrFail($id);
-        return response()->json(array('message' => 'Data detail retrieved successfully', 'data' => $book), 200);
+        $book->deleted_by = Auth::user()->id; // Track who deleted the record
+        $book->delete();
+
+        return response()->json(array('message' => 'Data detail retrieved successfully', 'data' => $book), 204);
     }
     /**
      * @OA\Put(
@@ -129,6 +257,10 @@ class BookController extends Controller
      *     tags={"book"},
      *     summary="Update the specified item",
      *     operationId="update",
+     *     security={
+     *         {"passport_token_ready"={}},
+     *         {"passport"={}}
+     *     },
      *     @OA\Response(
      *         response=404,
      *         description="Item not found",
@@ -217,15 +349,20 @@ class BookController extends Controller
      *             format="int64"
      *         )
      *     ),
-     *     security={{"passport_token_ready"={}, "passport"={}}}
+     *     security={
+     *      {"passport_token_ready"={}},
+     *      {"passport"={}}
+     * }
      * )
      */
-    public function destroy($id)
-    {
-        $book = Book::findOrFail($id);
-        $book->delete();
+   public function destroy($id)
+{
+    $book = Book::findOrFail($id);
+    $book->delete();
 
-        return response()->json(array('message' => 'Deleted successfully', 'data' => $book), 204);
-    }
-
+    return response()->json([
+        'message' => 'Deleted successfully',
+        'data' => $book
+    ], 200);
+}
 }
