# storage/api-docs/api-docs.json
@@ -104,17 +104,6 @@
                 ],
                 "summary": "Log out & destroy self token",
                 "operationId": "logout",
-                "parameters": [
-                    {
-                        "name": "email",
-                        "in": "path",
-                        "description": "User Email",
-                        "required": true,
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                ],
                 "responses": {
                     "400": {
                         "description": "Invalid input",
@@ -141,13 +130,65 @@
                 ]
             }
         },
-        "/api/book": {
+        "/my-api/public/api/book": {
             "get": {
                 "tags": [
                     "book"
                 ],
                 "summary": "Display a listing of items",
                 "operationId": "index",
+                "parameters": [
+                    {
+                        "name": "_page",
+                        "in": "query",
+                        "description": "current page",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64",
+                            "example": 1
+                        }
+                    },
+                    {
+                        "name": "_limit",
+                        "in": "query",
+                        "description": "max item in a page",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64",
+                            "example": 10
+                        }
+                    },
+                    {
+                        "name": "_search",
+                        "in": "query",
+                        "description": "word to search",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "_publisher",
+                        "in": "query",
+                        "description": "search by publisher like name",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "_sort_by",
+                        "in": "query",
+                        "description": "word to search",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "example": "latest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "Successful",
@@ -157,7 +198,15 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "passport_token_ready": []
+                    },
+                    {
+                        "passport": []
+                    }
+                ]
             },
             "post": {
                 "tags": [
@@ -202,10 +251,18 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "passport_token_ready": []
+                    },
+                    {
+                        "passport": []
+                    }
+                ]
             }
         },
-        "/api/book/{id}": {
+        "/my-api/public/api/book/{id}": {
             "get": {
                 "tags": [
                     "book"
@@ -249,7 +306,15 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "passport_token_ready": []
+                    },
+                    {
+                        "passport": []
+                    }
+                ]
             },
             "put": {
                 "tags": [
@@ -314,7 +379,15 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "passport_token_ready": []
+                    },
+                    {
+                        "passport": []
+                    }
+                ]
             },
             "delete": {
                 "tags": [
@@ -362,7 +435,9 @@
                 },
                 "security": [
                     {
-                        "passport_token_ready": [],
+                        "passport_token_ready": []
+                    },
+                    {
                         "passport": []
                     }
                 ]
@@ -387,13 +462,6 @@
             }
         },
         "securitySchemes": {
-            "passport_token_ready": {
-                "type": "http",
-                "scheme": "bearer",
-                "description": "Enter token in format with \"Bearer \"",
-                "name": "Authorization",
-                "in": "header"
-            },
             "passport": {
                 "type": "oauth2",
                 "description": "Laravel passport oauth2 security.",
@@ -407,6 +475,13 @@
                         "scopes": []
                     }
                 }
+            },
+            "passport_token_ready": {
+                "type": "http",
+                "scheme": "bearer",
+                "description": "Enter token in format with \"Bearer \"",
+                "name": "Authorization",
+                "in": "header"
             }
         }
     },
